style: fix spacing

--- a/client/style.css
+++ b/client/style.css
@@ -116,6 +116,8 @@ h1 {
     max-width: var(--maxWidth);
     text-align: left;
     padding: 0px 10px;
+
+    flex: 1;
 }
 
 .skills {
